--- a/indeX.html
+++ b/indeX.html
@@ -22,7 +22,7 @@
 
     <ul class="menu" id="myHeader">
       <li>
-        <a href="#willkommen">Willkommen</a>
+        <a href="#willkommen">Über Uns</a>
       </li>
       <li>
         <a href="#vorschau">Trailer</a>
@@ -50,11 +50,14 @@
     <h2 class="SFD">Sustainable Fresh Delivery</h2>
   </div>
 
+<div class="text">
   <div class="section valueProposition" id="willkommen">
     <p>Für ernährungs- und umweltbewusste Personen, die wenig Zeit zum Einkaufen haben, ist Fresa das Mikrodepot und der Lieferservice
       regionaler Lebensmittel, der Zeit spart und den Bezug zur Regionalität schafft. Im Gegensatz zu anderen Lieferdiensten
       und Einzelhändlern liefert Fresa faire, frische Ware in personalisierten Boxen an frei wählbare Lieferstationen.</p>
   </div>
+</div>
+
 
   <div class="Trailer" id="vorschau">
     <div class="video centered-content">
@@ -65,32 +68,31 @@
     </div>
   </div>
 
+<div class="text">
   <div class="section Alleinstellungsmerkmale">
     <h2 class="Kapitelüberschrift">Einzigartiger Service</h2>
-    <p>Entspannt durch den Tag <br /><br />
+    <p>Entspannt durch den Tag <br /> <br />
 
-Fresa gibt seinen Kunden die Möglichkeit zu jeder gewünschten Uhrzeit die Bestellung persönlich abzuholen. Schluss mit weingefassten Zeitfenstern und langem, ungeduldigen Warten, ohne dass Haus verlassen zu können.
+      Fresa gibt seinen Kunden die Möglichkeit zu jeder gewünschten Uhrzeit die Bestellung persönlich abzuholen. Schluss mit weitgefassten Zeitfenstern und langem, ungeduldigen Warten, ohne dass Haus verlassen zu können.
 
-<br /><br /> Frische Ware ohne Zwischenhändler<br /><br />
+      <br /><br /> Frische Ware ohne Zwischenhändler<br /><br />
 
-Das Fresa (Zwischen-)lager dient viel mehr dem ordentlichen Verpacken der Bestellungen der Kunden, als ein Räumlichkeit, in der man Ware lange aufbewahrt, bis sie nicht mehr frisch ist. Fresa liefer frische, regionale Lebensmittel direkt vom Feld in deine Speisekammer.
+      Fresa liefer frische, regionale Lebensmittel direkt vom Feld in deine Speisekammer. Nur ein Zwischenstopp zum Verpacken der Ware wird eingelegt.
 
-<br /><br /> Bezug zur Regionalität schaffen <br /><br />
+      <br /><br /> Bezug zur Regionalität schaffen <br /><br />
 
-Die Bezeichnung "regional" hat viel zu sehr an Bedeutung verloren. Fresa möchte seinen Mitgliedern den wertvollen Bezug zur Regionalität wieder näherbringend und lernen, welche Lebensmittel wann Saison haben.
+      Fresa möchte seinen Mitgliedern den wertvollen Bezug zur Regionalität wieder näherbringen.
 
-<br /><br /> Frei wählbare Lieferstationen<br /><br />
+      <br /><br /> Frei wählbare Lieferstationen<br /><br />
 
-Fresa stellt eine Vielzahl von Speisekammern zur Verfügung in jeder Ecke Ihrer Stadt. Sie wollen ihre frische Ware auf dem Weg nachhause einsammeln? Dann wählen sie eine Speisekammer in der Nähe ihres zuhause. Sie möchten sich auf der Arbeit in der Mittagspause mit ein paar Kollegen etwas gutes kochen? Dann wählen sie doch einfach eine Speisekammer in der Nähe ihres Arbeitsplatzes und sammeln es vor Arbeitsbeginn ein.
+      Fresa stellt eine Vielzahl von Speisekammern zur Verfügung. Sie wollen ihre frische Ware auf dem Weg nachhause einsammeln? Dann wählen sie eine Speisekammer in der Nähe ihres zuhause. Sie möchten sich auf der Arbeit in der Mittagspause mit ein paar Kollegen etwas gutes kochen? Dann wählen sie doch einfach eine Speisekammer in der Nähe ihres Arbeitsplatzes und sammeln es vor Arbeitsbeginn ein.
 
-<br /><br /> Zeit sparen<br /> <br />
-
-Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte, dass sie sich bewusst und gesund ernähren können, ohne dafür wertvolle Zeit ihres wohlverdienten Feierabends zu verlieren. Während sie noch arbeiten, Erledigungen machen oder anderen Verpflichtungen nachgehen, stellt Fresa ihre persönliche Bestellung bereit. Suchen sie sich eine Speisekammer auf ihrem Heimweg aus, können sie diese ohne einen weiteren Umweg zu gehen einsammeln.
+      Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte, dass sie sich bewusst und gesund ernähren können, ohne dafür wertvolle Zeit ihres wohlverdienten Feierabends zu verlieren.
     </p>
   </div>
+</div>
 
-
-
+<div class="text">
   <div class="section Was_bedeutet_Regional_für_Fresa">
     <h2 class="Kapitelüberschrift">Was bedeutet Regional für Fresa?</h2>
     <p>Die Verbraucherstudie „Wie steht der Verbraucher heutzutage zur Regionalität?" aus dem Jahr 2013 beschäftigte sich intensiv
@@ -100,8 +102,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       werben. Wie steht der Verbraucher heutzutage zur Regionalität? Die Händler haben den Trend schon lange entdeckt und
       hoff en durch regional erzeugten Produkte mehr Kunden an ihre Märkte zu binden und den Kauf in gewisser Weise zu emotionalisieren.</p>
   </div>
+</div>
 
-
+<div class="text">
   <div class="WarumBio_image">
     <div class="overlay3">
     </div>
@@ -118,8 +121,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </div>
     </div>
   </div>
+</div>
 
-
+<div class="text">
   <div class="section Wer_nutzt_Fresa">
     <h2 class="Kapitelüberschrift Verbraucher">Wer nutzt Fresa?</h2>
     <div class="Verbraucher_image">
@@ -147,20 +151,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       -->
     </p>
   </div>
-  <div class="section tineText">
-    <h2 class="Kapitelüberschrift Tine">Das ist Tine.</h2>
-    <p>Tine ist in Nordhessen aufgewachsen und möchte gerne frische Lebensmittel in ihr Leben integrieren, da sie sich von Grund
-      auf gesund ernährt. Ihr Mann und sie sind Foodies und kochen leidenschaftlich gerne. Sie verfolgen die neusten Trends für die Küche. Beide sind berufstätig und haben
-      sehr wenig Zeit einzukaufen. Sie sind beide äußerst technikaffin und täglich im Internet. Tine legt großen Wert auf
-      die ganzjährige Verfügbarkeit ihr Lieblingsprodukte Paprika und Zucchini. An einem typischen Wochentag ist Tine von
-      morgens gegen 07:30 Uhr bis abends gegen 18 Uhr arbeiten. In der Mittagspause hat sie am liebsten etwas selbstgemachtes
-      dabei, was sie sich dann in der Firmenküche aufwärmt und in Gesellschaft ihrer liebsten Arbeitskollegen genießt. Leider
-      lässt ihr langer Tag jedoch nicht immer Zeit dafür übrig, Lebensmittel einzukaufen, die noch dazu frisch sind. Denn
-      nach der Arbeit erwartet Tine nicht immer schon der Feierabend sondern oft auch weitere Termine und Verpflichtungen,
-      wie Arztbesuche, Haushalt und familiäre Angelegenheiten. Tine vermisst einen Service, welcher ihr dabei hilft beim
-      Einkaufen frischer Lebensmittel mehr auf Regionalität zu achten, ihr Zeit spart und der abwechslungsreich ist.
-    </p>
-  </div>
+</div>
+
+<div class="text">
   <div class="section VertrauenText">
     <h2 class="Kapitelüberschrift Vertrauen">Vertrauen</h2>
     <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel geht.
@@ -174,7 +167,7 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       zu ermöglichen.
     </p>
   </div>
-
+</div>
 
   <div class="FresaDesign_image">
     <div class="overlay">
@@ -190,18 +183,24 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
     </div>
   </div>
 
+<div class="text">
   <div class="section Bestandteile">
     <h2 class="Kapitelüberschrift FresaBestandteile">Fresa Bestandteile</h2>
     <div class="FresaKonzept_image">
     </div>
+  </div>
 
+<div class="text">
     <h3 class="Kapitelpunkte FresaKonzept">Fresa</h3>
     <div class="Fresa-Konzept">
       <p>Regionale Waren holt Fresa direkt beim Erzeuger ab und liefert sie in das stadtnah gelegene Mikrodepot. Der Nutzerkann die Produkte von Fresa entweder selbst abholen oder sich in der Fresa Clipbox liefern lassen.
       </p>
     </div>
   </div>
+</div>
 
+
+<div class="text">
   <div class="section Mikrodepot">
     <div class="FresaMikrodepot_image">
     </div>
@@ -217,7 +216,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </p>
     </div>
   </div>
+  </div>
 
+<div class="text">
   <div class="section Vermarktungsprinzip">
     <h3 class="Kapitelpunkte Vermarktungsprinzip">Erzeugernahes Vermarktungsprinzip</h3>
     <div class="Fresa-Vermarktungsprinzip">
@@ -225,7 +226,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </p>
     </div>
   </div>
+</div>
 
+<div class="text">
   <div class="section Krummes_Gemüse">
     <h3 class="Kapitelpunkte KrummesGemüse">Krummes Gemüse</h3>
     <div class="Fresa-KrummesGemüse">
@@ -233,7 +236,10 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </p>
     </div>
   </div>
+</div>
 
+
+<div class="text">
   <div class="section Was_Gibt_Es_In_Der_Region">
     <h3 class="Kapitelpunkte WasGibtEsInDerRegion">Was gibt es in der Region?</h3>
     <div class="Fresa-WasGibtEsInDerRegion">
@@ -241,7 +247,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </p>
     </div>
   </div>
+</div>
 
+<div class="text">
   <div class="Materialstudie_image">
     <div class="overlay5">
     </div>
@@ -259,10 +267,13 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
     <div class="Material_image2">
     </div>
   </div>
+</div>
 
+<div class="text">
   <div class="section Preise">
     <h2 class="Kapitelüberschrift Pricing">Unsere Preise</h2>
     <div class="Pricing_image">
+  </div>
   </div>
 </div>
 
@@ -279,7 +290,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
     </p>
   </div>
 </div>
+</div>
 
+<div class="text">
   <h2 class="Kapitelüberschrift WorksLike">Workslike Prototyp</h2>
   <div class="TechnikVideo">
     <div class="video centered-content">
@@ -289,7 +302,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </video>
     </div>
   </div>
+</div>
 
+<div class="text">
   <div class="section LooksLike">
     <h2 class="Kapitelüberschrift Looks_like">Lookslike Prototyp</h2>
     <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel geht.
@@ -309,8 +324,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
     <div class="Lookslike_image3">
     </div>
   </div>
+</div>
 
-
+<div class="text">
   <div class="Kontakt" id=kontakt>
     <h2 class="Kapitelüberschrift Team">Kontakt</h2>
     <div class="row">
@@ -338,6 +354,9 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </div>
     </div>
   </div>
+</div>
+
+
         <div class="Z-Q">
         <h2 class="Kapitelüberschrift ZitateQuellen">Zitate & Quellen</h2>
         <div class="Zitate-Quellen">
@@ -367,7 +386,6 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
       </div>
       </div>
     </div>
-
 
 
 
@@ -403,7 +421,7 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
         // When the user scrolls the page, execute myFunction
         window.onscroll = function() {headerOpacity()};
 
-        
+
       </script>
 
     <!--  <script type='text/javascript' src="jquery.js">
