--- a/indeX.html
+++ b/indeX.html
@@ -38,9 +38,8 @@
 
 
   <div class="intro_image">
-    <div class="overlay">
-    </div>
     <div id="slideshow">
+      <div class="overlay"></div>
       <img src="./Pics/saison.JPG" style="width:100%;max-height:100%">
       <img src="./Pics/hühner.jpg" style="width:100%;max-height:100%">
       <img src="./Pics/feld.jpg" style="width:100%;max-height:100%">
@@ -71,27 +70,27 @@
       <div class="usp">
         <div class="block">
           <div class="feat-img">
-            <img src="http://lorempixel.com/200/200" alt="">
+            <img src="" alt="">
           </div>
           <p>Entspannt durch den Tag</p>
         </div>
         <div class="block">
           <div class="feat-img">
-            <img src="http://lorempixel.com/200/200" alt="">
+            <img src="" alt="">
           </div>
           <p>Frische Ware ohne Zwischenhändler</p>
 
         </div>
         <div class="block">
           <div class="feat-img">
-            <img src="http://lorempixel.com/50/50" alt="">
+            <img src="" alt="">
           </div>
           <p>Bezug zur Regionalität schaffen</p>
 
         </div>
         <div class="block">
           <div class="feat-img">
-            <img src="http://lorempixel.com/200/200" alt="">
+            <img src="" alt="">
           </div>
           <p>Frei wählbare Lieferstationen</p>
 
@@ -101,36 +100,29 @@
 
     </div>
 
-    <div class="section">
-      <h2 class="heading">Was bedeutet Regional für Fresa?</h2>
-      <p>Die Verbraucherstudie „Wie steht der Verbraucher heutzutage zur Regionalität?" aus dem Jahr 2013 beschäftigte sich
-        intensiv mit der Entwicklung der Begriff e Regionalität und Bio in unserer Gesellschaft so wie ihrer Bedeutung in
-        eben dieser. „Im Vergleich zu Bio wird Regionalität in der Zukunft immer wichtiger." Der Begriff Regionalität gewinnt
-        immer mehr an Aufmerksamkeit. Die Regale unserer Supermärkte geben häufi ger Platz für Produkte, die mit der Aufschrift
-        „regional" werben. Wie steht der Verbraucher heutzutage zur Regionalität? Die Händler haben den Trend schon lange
-        entdeckt und hoff en durch regional erzeugten Produkte mehr Kunden an ihre Märkte zu binden und den Kauf in gewisser
-        Weise zu emotionalisieren.</p>
-    </div>
+
   </div>
 
   <div class="WarumBio_image">
     <div class="overlay3">
     </div>
-    <div class="section">
+    <div class="content section ">
       <h2 class="heading bio">Warum Bio?</h2>
       <div class="warumBio">
-        <p>Auf die Frage, wer oder was das Interesse an Bio-Lebensmitteln gestärkt und geweckt hat, antworteten ganze 65% der
-          Befragten in einer Studie des Bundesministerium für Ernährung und Landwirtschaft, dass es von privaten Kontakten
-          stammt, welche ebenfalls Nutzer/-innen von Bioprodukten sind. Als zweithäufigste Aussage stellte sich die ärztliche
-          Empfehlung und eigene Initiative als Anregung heraus, Bio-Lebensmittel zu verzehren. Andere relativ häufig genannte
-          Beweggründe waren etwa reine Neugier oder neue Produkte im gewohnten Supermarkt Sortiment auszuprobieren, sowie
-          Werbung durch Bioläden und Beratung in diesem oder direkt vom Erzeuger.
-        </p>
+
       </div>
     </div>
   </div>
 
   <div class="content">
+
+    <p>Auf die Frage, wer oder was das Interesse an Bio-Lebensmitteln gestärkt und geweckt hat, antworteten ganze 65% der Befragten
+      in einer Studie des Bundesministerium für Ernährung und Landwirtschaft, dass es von privaten Kontakten stammt, welche
+      ebenfalls Nutzer/-innen von Bioprodukten sind. Als zweithäufigste Aussage stellte sich die ärztliche Empfehlung und
+      eigene Initiative als Anregung heraus, Bio-Lebensmittel zu verzehren. Andere relativ häufig genannte Beweggründe waren
+      etwa reine Neugier oder neue Produkte im gewohnten Supermarkt Sortiment auszuprobieren, sowie Werbung durch Bioläden
+      und Beratung in diesem oder direkt vom Erzeuger.
+    </p>
     <div class="section">
       <h2 class="heading Vertrauen">Philosphie</h2>
       <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel
@@ -146,144 +138,9 @@
     </div>
   </div>
 
-  <div class="FresaDesign_image">
-    <div class="overlay">
-    </div>
-    <h2 class="heading Fresa_Design">Was macht Fresa?</h2>
-    <div class="section Fresa_Design">
-      <p>
-        Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen Erzeugnissen vereinfacht. Das System richtet
-        sich an Menschen, die bereits regionale Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert
-        sich in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln. Bestellungen
-        werden in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort
-        des Kunden zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
-      </p>
-    </div>
-  </div>
-  <div class="content">
-    <h2 class="heading FresaBestandteile">Fresa Bestandteile</h2>
-
-    <div class="section parts">
-      <h3 class="part-title">Fresa</h3>
-      <div class="part-block">
-        <p>Regionale Waren holt Fresa direkt beim Erzeuger ab und liefert sie in das stadtnah gelegene Mikrodepot. Der Nutzerkann
-          die Produkte von Fresa entweder selbst abholen oder sich in der Fresa Clipbox liefern lassen.
-        </p>
-        <img src="./Pics/mal.PNG" alt="">
-      </div>
-    </div>
 
 
-    <div class="section parts">
-      <h3 class="part-title">Fresa Mikrodepot</h3>
 
-      <div class="part-block">
-        <img src="./Pics/FresaMikrodepot.png" alt="" class="part">
-        <p class="part">Das Fresa Mikrodepot hat drei Funktionen: klassischer Lagerraum mit Kühlung, marktähnlicher Verkauf mit Probiermöglichkeit
-          und offene Küche mit Sitzbereich. Der klassische Lagerraum dient zur Kommissionierung der Abokisten, enthält eine
-          kleine Packstraße, und bietet den Erzeugern die Möglichkeit Waren einfach direkt zur Vermarktung weitergeben zu
-          können.
-        </p>
-      </div>
-    </div>
-
-    <div class="section parts">
-      <h3 class="part-title">Erzeugernahes Vermarktungsprinzip</h3>
-      <div class="part-block">
-        <p class="part">Fresa vermarktet die Produkte der Erzeuger, erwirtschaftet aber deutlich weniger Gewinn beim Einkauf der Waren als
-          ein marktüblicher Händler, wie es zum Beispiel bei einem Verkauf an einen Großhändler oder eine Handelskette gegeben
-          wäre. Fresa und die Erzeuger sind zwar unterschiedliche Firmen, Fresa unterstützt durch seine kleinen Gewinnmargen
-          beim Wareneinkauf aber den Erzeuger.
-        </p>
-      </div>
-    </div>
-
-    <div class="section parts">
-      <h3 class="part-title">Krummes Gemüse</h3>
-      <div class="part-block">
-        <p class="part">Fresa agiert erzeugernah: im Geschäftsmodell von Fresa ist ein neuer Absatzmarkt für krumm gewachsene Produkte, wie
-          es etwa beim Anbau von Möhren, Gurken, Kohl, Zucchini oder Spargel oft vorkommt, einkalkuliert. Im gängigen Großhandel
-          finden Erzeugnisse, die außerhalb einer früher EU-genormten, mittlerweile handelsinternen, normierten Klassifizierung
-          und Regelung gewachsen sind, kaum Absatz und müssen vom Erzeuger verfüttert oder vernichtet werden. Fresa bietet
-          den Erzeugern an, diese Waren anzukaufen. Um den Nutzern die Waren verständlich zu machen, werden sie als Solidarprodukte
-          in Kombination mit der Unterstützung eines gemeinnützigen Projekts verkauft.
-        </p>
-      </div>
-    </div>
-
-
-    <div class="section parts">
-      <h3 class="part-title">Was gibt es in der Region?</h3>
-      <div class="part-block">
-        <p class="part">Das Mikrodepot soll den Nutzern die Möglichkeit geben, die Waren und das regionale Konzept erfühlbar zu machen. Im
-          Marktbereich des Mikrodepots werden die Waren nach der Entfernung ihres Produktionsortes sortiert zum Verkauf aufgebaut,
-          ähnlich wie bei einem Marktstand oder einer Markthalle.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="Materialstudie_image">
-    <div class="overlay5">
-    </div>
-    <h2 class="heading Unsere_Materialien">Unsere Materialien</h2>
-
-  </div>
-  <div class="content">
-    <div class="Material_image1">
-    </div>
-    <div class="Material_image2">
-    </div>
-    <div class="section">
-      <h2 class="heading Pricing">Unsere Preise</h2>
-    </div>
-  </div>
-
-  <div class="Technik_image">
-    <div class="overlay6">
-    </div>
-    <h2 class="heading Technik">So funktionierts</h2>
-    <div class="section SoFunktionierts">
-      <p>
-        Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen Erzeugnissen vereinfacht. Das System richtet
-        sich an Menschen, die bereits regionale Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert
-        sich in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln. Bestellungen
-        werden in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort
-        des Kunden zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
-      </p>
-    </div>
-  </div>
-  <div class="content">
-    <h2 class="heading WorksLike">Workslike Prototyp</h2>
-    <div class="TechnikVideo">
-      <div class="video centered-content">
-        <a class="circle-canvas close-video" href="javascript:void(0)" id="video-close" rel="tooltipTOP" data-original-title="close"></a>
-        <video width="70%" height="80%" id="video" class="video" controls>
-          <source src="technikVideo.mp4">
-        </video>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2 class="heading Looks_like">Lookslike Prototyp</h2>
-      <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel
-        geht. Bei der Begrüßung angefangen, wird der Kaufprozess von mehreren Ereignissen begleitet. Diese führen dazu, dass
-        der Kunde einen Bezug zum Produkt und zum Erzeuger entwickelt. Hierzu gehören aber auch die Ware anfassen, daran
-        riechen und das Produkt mit allen Sinnen erleben. Das alles schafft die nötige Vertrauensbasis und ist wesentlicher
-        Bestandteil beim Kauf von regionalen Lebensmitteln. Menschen, die bewusst regionale Lebensmittel kaufen, möchten
-        auf diese Dinge nicht verzichten. Umfragen auf städtischen Wochenmärkten bestätigten dies. Die eben genannten Faktoren
-        fallen im Online Lebensmittelhandel weg und sind so gut wie nicht zu ersetzen. Darum ist es notwendig, einen Online
-        Markt für regionale Lebensmittel mit einer Anlaufstelle zu kombinieren, die dazu dient, dem Kunden einen Bezug zum
-        Produkt sowie zum Erzeuger zu ermöglichen.
-      </p>
-      <div class="Lookslike_image1">
-      </div>
-      <div class="Lookslike_image2">
-      </div>
-      <div class="Lookslike_image3">
-      </div>
-    </div>
-  </div>
 
   <div class="Kontakt" id=kontakt>
     <h2 class="heading Team">Kontakt</h2>
@@ -314,7 +171,7 @@
   </div>
 
 
-  <div class="Z-Q">
+  <!-- <div class="Z-Q">
     <h2 class="heading ZitateQuellen">Zitate & Quellen</h2>
     <div class="Zitate-Quellen">
       <p>1 Bundesministerium für Ernährung und Landwirtschaft, Ökobarometer 2017, Seite 14 https://www.bmel.de/SharedDocs/Downloads/Ernaehrung/Oekobarometer2017.pdf?__blob=publicationFile
@@ -343,7 +200,7 @@
         die Speisekammer, Z. 10-11. 21 http://www.lavialla.it/bottega/bio-sossen.php, Fattoria La Vialla
       </p>
     </div>
-  </div>
+  </div> -->
 
 
 
