--- a/indeX.html
+++ b/indeX.html
@@ -40,9 +40,9 @@
   <div class="intro_image">
     <div id="slideshow">
       <div class="overlay"></div>
-      <img src="./Pics/saison.JPG" style="width:100%;max-height:100%">
-      <img src="./Pics/hühner.jpg" style="width:100%;max-height:100%">
-      <img src="./Pics/feld.jpg" style="width:100%;max-height:100%">
+      <img src="./Pics/saison.JPG">
+      <img src="./Pics/hühner.jpg">
+      <img src="./Pics/feld.jpg">
     </div>
 
     <h2 class="SFD">Sustainable Fresh Delivery</h2>
@@ -103,26 +103,18 @@
 
   </div>
 
-  <div class="WarumBio_image">
-    <div class="overlay3">
-    </div>
-    <div class="content section ">
-      <h2 class="heading bio">Warum Bio?</h2>
-      <div class="warumBio">
-
-      </div>
-    </div>
-  </div>
-
   <div class="content">
+    <div class="section">
+      <h2 class="heading">Mehr als nur Bio</h2>
 
-    <p>Auf die Frage, wer oder was das Interesse an Bio-Lebensmitteln gestärkt und geweckt hat, antworteten ganze 65% der Befragten
-      in einer Studie des Bundesministerium für Ernährung und Landwirtschaft, dass es von privaten Kontakten stammt, welche
-      ebenfalls Nutzer/-innen von Bioprodukten sind. Als zweithäufigste Aussage stellte sich die ärztliche Empfehlung und
-      eigene Initiative als Anregung heraus, Bio-Lebensmittel zu verzehren. Andere relativ häufig genannte Beweggründe waren
-      etwa reine Neugier oder neue Produkte im gewohnten Supermarkt Sortiment auszuprobieren, sowie Werbung durch Bioläden
-      und Beratung in diesem oder direkt vom Erzeuger.
-    </p>
+      <p>Auf die Frage, wer oder was das Interesse an Bio-Lebensmitteln gestärkt und geweckt hat, antworteten ganze 65% der
+        Befragten in einer Studie des Bundesministerium für Ernährung und Landwirtschaft, dass es von privaten Kontakten
+        stammt, welche ebenfalls Nutzer/-innen von Bioprodukten sind. Als zweithäufigste Aussage stellte sich die ärztliche
+        Empfehlung und eigene Initiative als Anregung heraus, Bio-Lebensmittel zu verzehren. Andere relativ häufig genannte
+        Beweggründe waren etwa reine Neugier oder neue Produkte im gewohnten Supermarkt Sortiment auszuprobieren, sowie Werbung
+        durch Bioläden und Beratung in diesem oder direkt vom Erzeuger.
+      </p>
+    </div>
     <div class="section">
       <h2 class="heading Vertrauen">Philosphie</h2>
       <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel
@@ -141,35 +133,35 @@
 
 
 
+  <div class="content">
+    <div class="section" id="kontakt">
+      <h2 class="heading">Kontakt</h2>
+      <div class="row">
+        <div class="column">
+          <img src="./Pics/marco.png" alt="Marco" style="width:100%" "height:100%">
+          <p>Marco Frumento marco.frumento@fresa.de
+          </p>
+        </div>
+        <div class="column">
+          <img src="./Pics/hannah.png" alt="Hannah" style="width:100%" "height:100%">
+          <p>Sabine Reitmaier sabine.reitmaier@fresa.de
+          </p>
+        </div>
+        <div class="column">
+          <img src="./Pics/hannah.png" alt="Sabine" style="width:100%" "height:100%">
+          <p>Jan Meininghaus jan.meininghaus@fresa.de
+          </p>
+        </div>
+        <div class="column">
+          <img src="./Pics/jan.png" alt="Jan" style="width:100%" "height:100%">
+          <p>Hannah Ackermann hannah.ackermann@fresa.de
+          </p>
 
-  <div class="Kontakt" id=kontakt>
-    <h2 class="heading Team">Kontakt</h2>
-    <div class="row">
-      <div class="column">
-        <img src="./Pics/marco.png" alt="Marco" style="width:100%" "height:100%">
-        <p>Marco Frumento marco.frumento@fresa.de
-        </p>
-      </div>
-      <div class="column">
-        <img src="./Pics/hannah.png" alt="Hannah" style="width:100%" "height:100%">
-        <p>Sabine Reitmaier sabine.reitmaier@fresa.de
-        </p>
-      </div>
-      <div class="column">
-        <img src="./Pics/hannah.png" alt="Sabine" style="width:100%" "height:100%">
-        <p>Jan Meininghaus jan.meininghaus@fresa.de
-        </p>
-      </div>
-      <div class="column">
-        <img src="./Pics/jan.png" alt="Jan" style="width:100%" "height:100%">
-        <p>Hannah Ackermann hannah.ackermann@fresa.de
-        </p>
-
-        <script type='text/javascript' src="jquery.js"></script>
+          <script type='text/javascript' src="jquery.js"></script>
+        </div>
       </div>
     </div>
   </div>
-
 
   <!-- <div class="Z-Q">
     <h2 class="heading ZitateQuellen">Zitate & Quellen</h2>
