--- a/indeX.html
+++ b/indeX.html
@@ -19,19 +19,16 @@
 
     <ul class="menu" id="myHeader">
       <li>
-        <a href="#willkommen">Über Uns</a>
+        <a href="unternehmen.html">Über uns</a>
       </li>
       <li>
-        <a href="#vorschau">Trailer</a>
+        <a href="produkt.html">Die Speisekammer</a>
       </li>
       <li>
-        <a href="#wasistfresa">Was ist Fresa</a>
+        <a href="pricing.html">Preise</a>
       </li>
       <li>
-        <a href="#technik">Technik</a>
-      </li>
-      <li>
-        <a href="#kontakt">Kontakt</a>
+        <a href="index.html#kontakt">Kontakt</a>
       </li>
     </ul>
   </nav>
@@ -65,34 +62,40 @@
     </div>
 
     <div class="section">
-      <h2 class="heading">Einzigartiger Service</h2>
+      <h2 class="heading">Fresa ist einzigartig</h2>
 
       <div class="usp">
         <div class="block">
           <div class="feat-img">
-            <img src="" alt="">
+            <img src="./Pics/Uhr2.jpg" alt="">
           </div>
-          <p>Entspannt durch den Tag</p>
+          <p class="usp-title">Fresa spart Zeit</p>
+          <p class="text">Kein langes Warten um Bestellungen entgegen zu nehmen, stattdessen Ware flexibel auf dem Weg nachhause einsammeln.
+            Fresa möchte, dass sie sich regional und gesund ernähren können, ohne wertvolle Zeit ihres wohlverdienten Feierabends
+            zu verlieren.</p>
         </div>
         <div class="block">
           <div class="feat-img">
-            <img src="" alt="">
+            <img src="./Pics/TrekkerTeller2.jpg" alt="">
           </div>
-          <p>Frische Ware ohne Zwischenhändler</p>
+          <p class="usp-title">Vom Feld zum Tisch</p>
+          <p class="text">Fresa garantiert keinen langen Aufenthalt der Ware oder unnötige Zwischenstopps einzulegen. Regionale Lebensmittel
+            direkt vom Feld in deine Speisekammer.</p>
+        </div>
+        <div class="block">
+          <div class="feat-img">
+            <img src="./Pics/Hand.jpg" alt="">
+          </div>
+          <p class="usp-title">Bezug zu Regionalität</p>
+          <p class="text">Fresa bringt seinen Kunden den wertvollen Bezug zur Regionalität wieder und unterstützt lokale Erzeuger.</p>
 
         </div>
         <div class="block">
           <div class="feat-img">
-            <img src="" alt="">
+            <img src="./Pics/Karte.jpg" alt="">
           </div>
-          <p>Bezug zur Regionalität schaffen</p>
-
-        </div>
-        <div class="block">
-          <div class="feat-img">
-            <img src="" alt="">
-          </div>
-          <p>Frei wählbare Lieferstationen</p>
+          <p class="usp-title">Viele Standorte</p>
+          <p class="text">Fresa bietet eine Vielzahl von Speisekammern überall in ihrer Nähe.</p>
 
         </div>
       </div>
