--- a/unternehmen.html
+++ b/unternehmen.html
@@ -19,19 +19,16 @@
 
     <ul class="menu" id="myHeader">
       <li>
-        <a href="#willkommen">Über Uns</a>
+        <a href="unternehmen.html">Über uns</a>
       </li>
       <li>
-        <a href="#vorschau">Trailer</a>
+        <a href="produkt.html">Die Speisekammer</a>
       </li>
       <li>
-        <a href="#wasistfresa">Was ist Fresa</a>
+        <a href="pricing.html">Preise</a>
       </li>
       <li>
-        <a href="#technik">Technik</a>
-      </li>
-      <li>
-        <a href="#kontakt">Kontakt</a>
+        <a href="index.html#kontakt">Kontakt</a>
       </li>
     </ul>
   </nav>
