--- a/produkt.html
+++ b/produkt.html
@@ -19,6 +19,9 @@
 
     <ul class="menu" id="myHeader">
       <li>
+        <a href="index.html">Fresa</a>
+      </li>
+      <li>
         <a href="unternehmen.html">Über uns</a>
       </li>
       <li>
@@ -51,15 +54,8 @@
   <div class="Technik_image">
     <div class="overlay6">
     </div>
-    <h2 class="heading Technik">So funktionierts</h2>
-    <div class="section SoFunktionierts">
-      <p>
-        Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen Erzeugnissen vereinfacht. Das System richtet
-        sich an Menschen, die bereits regionale Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert
-        sich in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln. Bestellungen
-        werden in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort
-        des Kunden zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
-      </p>
+    <div class="section SoFunktionierts content">
+      <h2 class="heading Technik">So funktionierts</h2>
     </div>
   </div>
   <div class="content">
