--- a/pricing.html
+++ b/pricing.html
@@ -20,6 +20,9 @@
 
     <ul class="menu" id="myHeader">
       <li>
+        <a href="index.html">Fresa</a>
+      </li>
+      <li>
         <a href="unternehmen.html">Über uns</a>
       </li>
       <li>
